[gd_scene load_steps=4 format=3 uid="uid://codjjmo3dhdul"]

[ext_resource type="Script" uid="uid://cybn8if3kgju1" path="res://scripts/quest_ui.gd" id="1_0nwrp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2337"]
bg_color = Color(0.729412, 0.721569, 0.533333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nwrp"]
bg_color = Color(0.811765, 0.760784, 0.45098, 1)

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nwrp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Backgrounds" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG_1" type="Panel" parent="Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_f2337")

[node name="BG_2" type="Panel" parent="Panel/Backgrounds"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0nwrp")

[node name="Contents" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Headings" type="HBoxContainer" parent="Panel/Contents"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="Lists" type="Label" parent="Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Danh sách nhiện vụ"

[node name="Details" type="Label" parent="Panel/Contents/Headings"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chi tiết nhiệm vụ"

[node name="Details" type="HBoxContainer" parent="Panel/Contents"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="Panel/Contents/Details"]
layout_mode = 2

[node name="QuestDetail" type="VBoxContainer" parent="Panel/Contents/Details"]
layout_mode = 2

[node name="QuestTitle" type="Label" parent="Panel/Contents/Details/QuestDetail"]
layout_mode = 2

[node name="QuestDescription" type="Label" parent="Panel/Contents/Details/QuestDetail"]
layout_mode = 2

[node name="QuestObjectives" type="VBoxContainer" parent="Panel/Contents/Details/QuestDetail"]
layout_mode = 2

[node name="QuestRewards" type="VBoxContainer" parent="Panel/Contents/Details/QuestDetail"]
layout_mode = 2
