extends Control

@onready var panel = $Panel
@onready var quest_list = $Panel/Contents/Details/QuestList
@onready var quest_title = $Panel/Contents/Details/QuestDetail/QuestTitle
@onready var quest_description = $Panel/Contents/Details/QuestDetail/QuestDescription
@onready var quest_objectives = $Panel/Contents/Details/QuestDetail/QuestObjectives
@onready var quest_rewards = $Panel/Contents/Details/QuestDetail/QuestRewards
